--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:ital@1&display=swap" rel="stylesheet">
-    <title>sleeeeep</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <title>trenirovka</title>
 </head>
 <body>
     <div class="first-screen">
         <div class="first-screen__header">
-            <div class="first-screen__header__iner">
+            <div class="first-screen__header__inner">
                 <img src="img/logo.png" class="logo" alt="">
                 <nav class="first-screen__header__nav">
                     <a href="#">О компании</a>
@@ -29,12 +29,11 @@
         <div class="first-screen__text">
             <h1 class="first-screen__title">Светотехническое оборудование в Петербурге</h1>
             <p class="first-screen__subtitle">Продажа, аренда светотехнического оборудования.
-                Оформление официальный мероприятий под ключ.</p>
+                    Оформление официальных мероприятий под ключ.</p>
             <a href="#" class="first-screen__btn">ПЕРЕЙТИ</a>
         </div>
     </div>
     
-
     <div class="container">
         <div class="slider">
             <div class="slider-top">
@@ -51,13 +50,13 @@
                 <div class="slider-cards__item">
                     <div class="slider-cards__item__text">
                         <h3>ССК "ОЛИМП"</h3>
-                        <p>Светловое оформление форума "Шубы-2019</p>
+                        <p>Световое оформление форума “Шубы-2019”</p>
                     </div>
                 </div>
                 <div class="slider-cards__item2">
                     <div class="slider-cards__item__text">
-                        <h3>ССК "ОЛИМП</h3>
-                        <p>Светловое оформление форума "Шубы-2019</p>
+                        <h3>ССК "ОЛИМП"</h3>
+                        <p>Световое оформление форума “Шубы-2019”</p>
                     </div>
                 </div>
             </div>
@@ -67,7 +66,7 @@
             <div class="rent-top">
                 <div class="rent-top__left">
                     <img src="img/decor-heading.png" alt="">
-                    <p>Аренда оборудования</p>
+                    <p>АРЕНДА ОБОРУДОВАНИЯ</p>
                 </div>
             </div>
             <div class="rent-main">
@@ -89,11 +88,11 @@
                         <div class="rent-right__mid__right">
                             <p>Robe Robin ParFect 100</p>
                             <ul>
-                                <li>Источник света 12 светодиодов RGBW по 15 Вт каждый
-                                </li>
+                                <li>Источник света 12 светодиодов RGBW  по 15 Вт каждый
+                                    </li>
                                 <li>Угол раскрытия 7°</li>
                                 <li>В комплекте рассеивающая линза 40°
-                                </li>
+                                    </li>
                                 <li>Потребляемая мощность 200 Вт</li>
                             </ul>
                         </div>
@@ -101,7 +100,81 @@
                 </div>
             </div>
         </div>
+
+        <div class="news">
+            <div class="news-top">
+                <div class="news-top__left">
+                    <img src="img/decor-heading.png" alt="">
+                    <p>НОВОСТИ</p>
+                </div>
+                <a href="#" class="news-top__btn">ВСЕ НОВОСТИ</a>
+            </div>
+            <div class="news-main">
+                <div class="news-main__left">
+                    <img src="img/news/left.png" alt="">
+                    <div class="news-main__left__text">
+                        <div class="news-main__left__text__top">
+                            <h1>семинар milos</h1>
+                            <p>27.01.2019</p>
+                        </div>
+                        <div class="news-main__left__text__mid">
+                            <p>
+                                Наши сотрудники прошли последний семинар от компании Milos.
+                                Они получили новый объем знаний, который позволит нашей компании заниматься оборудованием не только мероприятий, но производственных помещений.
+                            </p>
+                            <a href="#">Читать продолжение...</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="news-main__right">
+                    <div class="news-main__right__left">
+                        <h1>Выставка Prolight+Sound NAMM Russia 2016</h1>
+                        <p>30 контрактов, тысячи восторженных посетителей...</p>
+                        <div class="news-main__right__left__down">
+                            <img src="img/news/mid.png" alt="">
+                            <p>27.01.2019</p>
+                        </div>
+                    </div>
+                    <div class="news-main__right__left">
+                        <h1>Семинар Robe</h1>
+                        <p>30 января 2017 года наши сотрудники побывали в Берлине..</p>
+                        <div class="news-main__right__left__down">
+                            <img src="img/news/right.png" alt="">
+                            <p>27.01.2019</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-</body>
+        <div class="footer">
+            <div class="container">
+                <div class="footer-top">
+                    <p>(812) 710-80-25</p>
+                    <p>191180, Санкт-Петербург, Набережная реки Фонтанки, 90, корпус 1</p>
+                    <p>mail@translight.ru</p>
+                </div>
+                <div class="footer-mid">
+                    <div>
+                        <a href="#">О компании</a>
+                        <a href="#">Новости</a>
+                    </div>
+                    <div>
+                        <a href="#">Каталог</a>
+                        <a href="#">Аренда</a>
+                    </div>
+                    <div>
+                        <a href="#">Наши проекты</a>
+                        <a href="#">Сервисное обслуживание</a>
+                    </div>
+                </div>
+                <div class="footer-down">
+                    <p>© 2019 ЗАО «Транслайт». Все права защищены.</p>
+                    <p>Разработка и дизайн - D-e-n.ru</p>
+                </div>
+            </div>
+        </div>
+
 </html>
